# wakka

./: Cargo.toml  PHASE1_PLAN.md  PLAN.md  flake.nix
core/: ui_attributes.pl  ui_attributes_tests.pl  ui_changes.pl  ui_changes_bench.pl  ui_changes_tests.pl  ui_element.pl  ui_element_tests.pl  ui_layout.pl  ui_layout_tests.pl  ui_layout_text.pl  ui_native.pl  ui_native_tests.pl  ui_paint.pl  ui_paint_tests.pl  ui_state.pl  ui_state_bench.pl  ui_state_tests.pl
layout_text/: Cargo.toml
layout_text/src/: lib.rs
native/: Cargo.toml
native/src/: fli.rs  font.rs  interop.rs  lib.rs  paint.rs  text.rs
paint/: Cargo.toml
paint/src/: lib.rs
swi_fli/: Cargo.toml  build.rs
swi_fli/src/: lib.rs
