[package]
name = "native"
version = "0.1.0"
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
layout_text = { version = "0.1.0", path = "../layout_text" }
paint = { version = "0.1.0", path = "../paint" }
pollster = "1.0.1"
swi_fli = { version = "0.1.0", path = "../swi_fli" }
wgpu = { version = "29", default-features = false }
